fixed view on mobile

--- a/common/_colors.scss
+++ b/common/_colors.scss
@@ -4,4 +4,4 @@ $impact-sub-text-color: #87a1a1;
 $accent-color: #BB86FC;
 //$accent-color: #959302;
 $background-color: #121212;
-$component-overlay: #ffffff1C;
+$component-overlay: #ffffff17;
