--- a/portfolio_style.scss
+++ b/portfolio_style.scss
@@ -242,14 +242,14 @@ h1 {
 .aboutme_text_container {
 	background-color: $component-overlay;
 	border-radius: 7px;
-	padding: 5px;
+	padding: 15px;
 }
 
 .aboutme_img {
 	max-width: 400px;
 }
 
-#portfolio_container {
+#portfolio_container  {
 	margin: 200px 0;
 	display: block;
 }
@@ -292,6 +292,8 @@ h1 {
 	font-size:1.6rem;
 	margin: 20px;
 	font-weight: 100;
+	line-height: 2.5rem;
+
 }
 
 .project_link {
@@ -331,7 +333,7 @@ h1 {
 }
 
 #git_container {
-	margin: 200px 0;
+	margin: 100px 0;
 	display: block;
 }
 
@@ -350,7 +352,7 @@ h1 {
 
 .git_button {
 	display: inline-block;
-	margin: 10px 0;
+	margin: 40px 0;
 }
 
 .contact_container {
@@ -400,7 +402,7 @@ footer {
 	color: $impact-sub-text-color;
 	font-size: 2rem;
 }
-.footer_ghub:hover {
+.footer_ghub :hover {
 	color: $accent-color;
 	animation: fa-bounce 1s;
 	transition: color 0.3s;
@@ -477,7 +479,7 @@ footer {
 	}
 
 	.arrow_container {
-		display: none;
+		bottom: 10px;
 	}
 
 	.contact_container {
@@ -505,14 +507,42 @@ footer {
 	}
 
 	.aboutme_title, .portfolio_title, .git_title {
-		margin: 50px;
+		font-size: 3rem;
+		margin-right: 30px;
 	}
-
 }
 
 @media screen and (max-width: 500px) {
+	h1 {
+		font-size: 5rem;
+	}
+
+	.intro_button {
+		padding: 10px;
+	}
+
 	.nav_button {
 		display: none;
 		padding: 0;
+	}
+
+	.aboutme_img_border {
+		border-radius: 10px;
+		border-right: 3px solid $accent-color;
+		border-bottom: 3px solid $accent-color;
+		right: -10px;
+		bottom: -10px;
+	}
+
+	.aboutme_title, .portfolio_title, .git_title {
+		font-size: 2.5rem;
+	}
+
+	.intro_container {
+		justify-content: unset;
+	}
+
+	#git_container {
+		margin: 100px 0;
 	}
 }
